Issue #2138 Remove all support for Java 6 and 7 in build